# RenameFlow

./: .gitignore  .lintstagedrc.json  AGENTS.md  README.md  index.html  justfile  package.json  pnpm-lock.yaml
.husky/: pre-commit
.opencode/plans/: 2026-05-13-renameflow-implementation.md  2026-05-13-renameflow-phase1-3-design.md
docs/: spec.md
src/: App.css  App.tsx  types.ts  views.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai.rs  commands.rs  history.rs  lib.rs  main.rs  models.rs  providers.rs  recent.rs  rename.rs  sanitize.rs
src-tauri/src/ai/: anthropic.rs  google.rs  lm_studio.rs  mod.rs  openai.rs  parser.rs  provider.rs
src-tauri/src/commands/: cli_commands.rs  file_commands.rs  history_commands.rs  mod.rs  model_commands.rs  profile_commands.rs  rename_commands.rs
src-tauri/src/domain/: conflicts.rs  mod.rs  rename_plan.rs  sanitize.rs
src-tauri/src/extractors/: binary.rs  image.rs  media.rs  mod.rs  office.rs  text.rs
src-tauri/src/filesystem/: directory.rs  mod.rs  rename.rs  watcher.rs
src-tauri/src/history/: mod.rs  store.rs  undo.rs
src-tauri/tests/: ollama_test.rs
src/components/: AddProviderModal.tsx  ConfigBar.tsx  ControlBar.tsx  DragDropOverlay.tsx  DropZone.tsx  DroppedFileList.tsx  ErrorBoundary.tsx  FileBrowser.tsx  FileList.tsx  FolderCheckbox.tsx  HistorySection.tsx  HomeToolbar.tsx  PreviewTable.tsx  PromptField.tsx  ProviderManager.tsx  SettingsSection.tsx  Sidebar.tsx
src/domain/: files.ts  history.ts  rename.ts  settings.ts
(+20 files in other folders)
